--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "node-fetch": "^2.2.0",
+    "xml2js": "^0.4.19"
   }
 }
