--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-graphql": "^0.6.12",
     "graphql": "^14.0.2",
     "jsonwebtoken": "^8.3.0",
+    "knex": "^0.15.2",
     "node-fetch": "^2.2.0",
     "xml2js": "^0.4.19"
   }
